# raytrace

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera.cpp  camera.hpp  compile_flags.txt  hittable.hpp  image.hpp  material.hpp  vector.cpp
include/: interval.hpp  ray.hpp  util.hpp  vector.hpp
src/: camera.cpp  hittable.cpp  image.cpp  interval.cpp  main.cpp  material.cpp  ray.cpp  util.cpp
